--- a/AddDebt.xaml
+++ b/AddDebt.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button Width="35" Height="35" Margin="700,-400,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
         <Button Width="35" Height="35" Margin="600,-400,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
+        <Button Width="100" Height="30" Margin="370,-400,0,0" Click="mainMenu">Главное меню</Button>
         <Label Width="400" Height="40" Margin="-220,-370,0,0" FontSize="25">Имя:</Label>
         <TextBox Name="nameText" Width="500" FontSize="25" Height="40" Margin="-120,-280,0,0"></TextBox>
         <Label  Width="400" Height="40" Margin="-220,-170,0,0" FontSize="25">Фамилия:</Label>
