почти готовое перелистывание

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize" WindowStyle="None">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize" WindowStyle="None" HorizontalAlignment="Stretch">
     <Grid>
         <Button Width="35" Height="35" Margin="700,-400,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
         <Button Width="35" Height="35" Margin="600,-400,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
-        <Label FontSize="35" Margin="400,100,0,0">VVMLibrary</Label>
+        <Label FontSize="35" Height="60" Margin="400,-100,0,0">VVMLibrary</Label>
         <Button Width="100" Height="100" Margin="-450,-150,0,0" FontSize="70" Click="addUser" Content="+"></Button>
-        <Button Width="500" Height="100" Margin="150,300,150,50" FontSize="70" Click="showList">Список</Button>
+        <Button Width="500" Height="100" Margin="150,200,150,50" FontSize="70" Click="showList">Список</Button>
+        
          
     </Grid>
 </Window>
