--- a/List.xaml
+++ b/List.xaml
@@ -13,9 +13,9 @@
             <Button Width="35" Height="35" Margin="900,-35,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
             <Button Width="100" Height="50" Margin="-1000,0,0,0" Click="mainMenu">Главное меню</Button>
             <TextBox Name="searchBar" Width="500" Height="50" TextChanged="search" Margin="350,-40,0,0"></TextBox>
-            
-            <Button Name="next" Width="204" Height="50" Margin="-420,-50,0,0" FontSize="20" Click="nextpage">Следующая страница</Button>
-            <Button Name="prev" Width="204" Height="50" Margin="-1350,-50,0,0" FontSize="20" Click="previouspage">Предыдущая страница</Button>
+
+            <Button Name="next" Width="204" Height="50" Margin="-420,-50,0,0" FontSize="20" Click="nextpage">Вперед</Button>
+            <Button Name="prev" Width="204" Height="50" Margin="-1350,-50,0,0" FontSize="20" Click="previouspage">Назад</Button>
             <CheckBox Name="debters" Width="120"  Margin="-1000,0,0,0" Click="onlyDebt" >Только должники</CheckBox>
 
             <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Times New Roman">Имя</Label>
