--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,8 +11,8 @@
         <Button Width="35" Height="35" Margin="600,-400,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
         <Label FontSize="35" Height="60" FontFamily="Bahnschrift Light"  Margin="10,-340,0,0">VVMLibrary</Label>
         <Button Width="200" Height="50" FontFamily="Comic Sans MS" Margin="-450,-150,0,0" FontSize="20" Click="addUser" Content="Добавить читателя" Background="#FF737373"></Button>
-        <Button Width="200" Height="50" FontFamily="Comic Sans MS" Margin="0,-150,0,0" FontSize="20" Click="addUser" Content="Добавить книгу" Background="#FF787878"></Button>
-        <Button Width="200" Height="50" FontFamily="Comic Sans MS" Margin="450,-150,0,0" FontSize="20" Click="addUser" Content="Создать отчет" Background="#FF757575"></Button>
+        <Button Width="200" Height="50" FontFamily="Comic Sans MS" Margin="0,-150,0,0" FontSize="20" Content="Добавить книгу" Background="#FF787878"></Button>
+        <Button Width="200" Height="50" FontFamily="Comic Sans MS" Margin="450,-150,0,0" FontSize="20" Content="Создать отчет" Background="#FF757575"></Button>
         <Button Width="500" Height="100" FontFamily="Comic Sans MS" Margin="150,200,150,50" FontSize="70" Click="showList" Background="#FF797979">Список</Button>
         
          
