--- a/BookList.xaml
+++ b/BookList.xaml
@@ -31,7 +31,7 @@
                 <Label Width="300" Name="Pub1" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail1" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail1" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose1" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose1" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel2" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name2" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -40,7 +40,7 @@
                 <Label Width="300" Name="Pub2" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail2" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail2" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose2" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose2" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel3" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name3" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -49,7 +49,7 @@
                 <Label Width="300" Name="Pub3" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail3" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail3" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose3" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose3" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel4" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name4" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -58,7 +58,7 @@
                 <Label Width="300" Name="Pub4" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail4" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail4" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose4" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose4" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel5" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name5" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -67,7 +67,7 @@
                 <Label Width="300" Name="Pub5" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail5" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail5" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose5" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose5" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel6" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name6" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -76,7 +76,7 @@
                 <Label Width="300" Name="Pub6" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail6" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail6" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose6" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose6" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel7" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name7" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -85,7 +85,7 @@
                 <Label Width="300" Name="Pub7" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail7" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail7" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose7" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose7" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel8" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name8" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -94,7 +94,7 @@
                 <Label Width="300" Name="Pub8" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail8" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail8" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose8" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose8" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel9" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name9" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -103,7 +103,7 @@
                 <Label Width="300" Name="Pub9" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail9" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail9" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose9" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose9" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel10" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name10" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
@@ -112,7 +112,7 @@
                 <Label Width="300" Name="Pub10" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Avail10" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="NAvail10" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose10" Width="100" Height="30" Margin="1270,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="choose10" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="updLimitOfBook"></Button>
             </StackPanel>
 
         </StackPanel>
