--- a/AddDebt.xaml
+++ b/AddDebt.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
-        Title="AddDebt" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
-    <Grid>
+        Title="AddDebt" Height="470" Width="800" WindowStartupLocation="CenterScreen" Background="#FFC5D0E6" WindowStyle="None">
+    <Grid Background="#FFC5D0E6">
         <Button Width="35" Height="35" Margin="700,-400,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
         <Button Width="35" Height="35" Margin="600,-400,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
         <Button Width="100" Height="30" Margin="370,-400,0,0" Click="mainMenu">Главное меню</Button>
