--- a/BookList.xaml
+++ b/BookList.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
         Title="List" Height="500"  Width="1600" WindowStartupLocation="CenterScreen"  WindowStyle="None" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center">
-    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch">
+    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch" Background="#FFC5D0E6">
 
-        <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center">
+        <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center" Background="#FFC5D0E6">
             <Button Width="35" Height="35" Margin="1000,+10,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
             <Button Width="35" Height="35" Margin="900,-35,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
             <Button Width="100" Height="50" Margin="-880,0,0,0" Click="mainMenu">Главное меню</Button>
@@ -17,7 +17,7 @@
             <Button Name="next" Width="204" Height="50" Margin="-420,-70,0,0" FontSize="20" Click="nextpage">Вперед</Button>
             <Button Name="prev" Width="204" Height="50" Margin="-1350,-70,0,0" FontSize="20" Click="previouspage">Назад</Button>
 
-            <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Times New Roman">Название</Label>
+            <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Century Gothic">Название</Label>
             <Label Width="150"  FontSize="20" Margin="-930,-37,-35,-12" FontFamily="Times New Roman">Автор</Label>
             <Label Width="100"  FontSize="20" Margin="-580,-37,-35,-12" FontFamily="Times New Roman">Код</Label>
             <Label Width="300"  FontSize="20" Margin="80,-37,-35,-12" FontFamily="Times New Roman">Издатель</Label>
