--- a/List.xaml
+++ b/List.xaml
@@ -6,25 +6,25 @@
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
         Title="List" Height="500"  Width="1600" WindowStartupLocation="CenterScreen"  WindowStyle="None" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center">
-    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch" Background="#FFD0C5E6">
+    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch" Background="#FFC5D0E6">
         
         <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center" Background="#FFC5D0E6">
             <Button Width="35" Height="35" Margin="1000,0,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
             <Button Width="35" Height="35" Margin="900,-35,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
-            <Button Width="100" Height="50" Margin="-1000,0,0,0" Click="mainMenu">Главное меню</Button>
+            <Button Width="100" Height="50" Margin="-1000,0,0,0" FontFamily="Century Gothic" Click="mainMenu">Главное меню</Button>
             <TextBox Name="searchBar" Width="500" Height="50" TextChanged="search" Margin="350,-40,0,0"></TextBox>
 
-            <Button Name="next" Width="204" Height="50" Margin="-420,-50,0,0" FontSize="20" Click="nextpage">Вперед</Button>
-            <Button Name="prev" Width="204" Height="50" Margin="-1350,-50,0,0" FontSize="20" Click="previouspage">Назад</Button>
-            <CheckBox Name="debters" Width="120"  Margin="-1000,0,0,0" Click="onlyDebt" >Только должники</CheckBox>
+            <Button Name="next" Width="204" Height="50" Margin="-420,-50,0,0" FontFamily="Century Gothic" FontSize="20" Click="nextpage">Вперед</Button>
+            <Button Name="prev" Width="204" Height="50" Margin="-1350,-50,0,0" FontFamily="Century Gothic" FontSize="20" Click="previouspage">Назад</Button>
+            <CheckBox Name="debters" Width="120"  Margin="-1000,0,0,0" FontFamily="Century Gothic" Click="onlyDebt" >Только должники</CheckBox>
 
-            <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Times New Roman">Имя</Label>
-            <Label Width="150"  FontSize="20" Margin="-1070,-37,-35,-12" FontFamily="Times New Roman">Фамилия</Label>
-            <Label Width="100"  FontSize="20" Margin="-680,-37,-35,-12" FontFamily="Times New Roman">Класс</Label>
-            <Label Width="300"  FontSize="20" Margin="-300,-37,-35,-12" FontFamily="Times New Roman">Книга</Label>
-            <Label Width="184"  FontSize="20" Margin="200,-37,-35,-12" FontFamily="Times New Roman">Дата получения</Label>
-            <Label Width="120"  FontSize="20" Margin="570,-37,-35,-12" FontFamily="Times New Roman">Доступна до</Label>
-            <Label Width="120"  FontSize="20" Margin="1400,-37,-35,-12" FontFamily="Times New Roman">Номер</Label>
+            <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Century Gothic">Имя</Label>
+            <Label Width="150"  FontSize="20" Margin="-1070,-37,-35,-12" FontFamily="Century Gothic">Фамилия</Label>
+            <Label Width="100"  FontSize="20" Margin="-680,-37,-35,-12" FontFamily="Century Gothic">Класс</Label>
+            <Label Width="300"  FontSize="20" Margin="-300,-37,-35,-12" FontFamily="Century Gothic">Книга</Label>
+            <Label Width="184"  FontSize="20" Margin="200,-37,-35,-12" FontFamily="Century Gothic">Дата получения</Label>
+            <Label Width="146"  FontSize="20" Margin="545,-37,-35,-12" FontFamily="Century Gothic">Доступна до</Label>
+            <Label Width="120"  FontSize="20" Margin="1400,-37,-35,-12" FontFamily="Century Gothic">Номер</Label>
             <StackPanel Name ="panel1" Height="50" Margin="0,50,0,0">
             
                 <Label Width="150" Name="Name1" FontSize="20" Margin="-1400,0,0,0">aaa</Label>
@@ -34,8 +34,8 @@
                 <Label Width="120" Name="TakeDate1" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate1" FontSize="20" Margin="570,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Num1" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit1" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete1" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit1" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete1" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck1" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel2" Height="50" Margin="0,0,0,0">
@@ -46,8 +46,8 @@
                 <Label Width="120" Name="TakeDate2" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate2" FontSize="20" Margin="570,-37,-35,-12">aaa</Label> 
                 <Label Width="120" Name="Num2" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit2" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete2" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit2" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete2" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck2" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel3" Height="50" Margin="0,0,0,0">
@@ -58,8 +58,8 @@
                 <Label Width="120" Name="TakeDate3" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate3" FontSize="20" Margin="570,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Num3" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit3" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete3" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit3" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete3" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck3" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel4" Height="50" Margin="0,0,0,0">
@@ -70,8 +70,8 @@
                 <Label Width="120" Name="TakeDate4" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate4" FontSize="20" Margin="570,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Num4" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit4" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete4" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit4" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete4" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck4" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel5" Height="50" Margin="0,0,0,0">
@@ -82,8 +82,8 @@
                 <Label Width="120" Name="TakeDate5" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate5" FontSize="20" Margin="570,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Num5" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit5" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete5" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit5" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete5" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck5" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel6" Height="50" Margin="0,0,0,0">
@@ -94,8 +94,8 @@
                 <Label Width="120" Name="TakeDate6" FontSize="20" Margin="250,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="RetutrnDate6" FontSize="20" Margin="570,-37,-35,-12">aaa</Label>
                 <Label Width="120" Name="Num6" FontSize="20" Margin="1400,-37,-35,-12">aaa</Label>
-                <Button Name="limit6" Width="100" Height="30" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
-                <Button Name="delete6" Width="100" Height="30" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
+                <Button Name="limit6" Width="100" Height="30" FontFamily="Century Gothic" Margin="870,-30,0,0" Content="Продлить книгу" Click="updLimitOfBook"></Button>
+                <Button Name="delete6" Width="100" Height="30" FontFamily="Century Gothic" Margin="1090,-30,0,0" Content="Удалить" Click="deleteDebt"></Button>
                 <Label Name="limitcheck6" Width="50" Margin="1290,-40,0,0" FontSize="30" Foreground="DarkGreen">!</Label>
             </StackPanel>
             <StackPanel Name ="panel7" Height="50" Margin="0,0,0,0">
