--- a/AddDebt.xaml
+++ b/AddDebt.xaml
@@ -16,6 +16,7 @@
         <TextBox Name="surnameText" Width="500" FontSize="25" Height="40" Margin="-120,-80,0,0"></TextBox>
         <Label Width="400" Height="40" Margin="-220,30,0,0" FontSize="25">Книга:</Label>
         <TextBox Name="bookText" Width="500" FontSize="25" Height="40" Margin="-120,120,0,0"></TextBox>
+        <Button Width="130" Height="40" Margin="600,120,0,0" Name="chooseBook" Content="Выбрать книгу" Click="chooseBookClick" FontSize="17"></Button>
         <Label Width="400" Height="40" Margin="-220,230,0,0" FontSize="25">Класс:</Label>
         <TextBox Name="gradeText" FontSize="25" Width="160" Height="40" Margin="-290,239,0,0"></TextBox>
         <Label Width="180" Height="45" Margin="200,230,0,0" FontSize="25">Срок (дней):</Label>
