--- a/List.xaml
+++ b/List.xaml
@@ -9,7 +9,7 @@
     <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch">
         
         <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center">
-            <Button Width="35" Height="35" Margin="1000,+10,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
+            <Button Width="35" Height="35" Margin="1000,0,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
             <Button Width="35" Height="35" Margin="900,-35,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
             <Button Width="100" Height="50" Margin="-1000,0,0,0" Click="mainMenu">Главное меню</Button>
             <TextBox Name="searchBar" Width="500" Height="50" TextChanged="search" Margin="350,-40,0,0"></TextBox>
