--- a/BookList.xaml
+++ b/BookList.xaml
@@ -9,8 +9,8 @@
     <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch" Background="#FFC5D0E6">
 
         <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center" Background="#FFC5D0E6">
-            <Button Width="35" Height="35" Margin="1000,+10,0,0" FontSize="20" Foreground="Red" Click="close">X</Button>
-            <Button Width="35" Height="35" Margin="900,-35,0,0" FontSize="20" Foreground="Blue" Click="min">-</Button>
+            <Button Width="35" Height="40" Margin="1000,10,0,0" FontSize="30" Foreground="#FF565656" Click="close" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6">X</Button>
+            <Button Width="35" Height="40" Margin="900,-35,0,0" FontSize="30" Foreground="#FF565656" Click="min" BorderBrush="#FFC5D0E6" Background="#FFC5D0E6">-</Button>
             <Button Width="100" Height="50" Margin="-880,0,0,0" Click="mainMenu">Главное меню</Button>
             <TextBox Name="searchBar" Width="500" Height="50" TextChanged="search" Margin="350,-40,0,0"></TextBox>
 
