--- a/addBook.xaml
+++ b/addBook.xaml
@@ -8,8 +8,8 @@
         Title="addBook" Height="750" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid Background="#FFC5D0E6">
         <Button Width="100" Height="30" FontFamily="Century Gothic" Margin="370,-700,0,0" Click="mainMenu" >Главное меню</Button>
-        <Button Width="35" Height="35" Margin="700,-700,0,0" Click="close" FontSize="20" Foreground="Red" >X</Button>
-        <Button Width="35" Height="35" Margin="600,-700,0,0" Click="min" FontSize="20" Foreground="Blue" >-</Button>
+        <Button Width="35" Height="40" Margin="700,-700,0,0" Click="close" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >X</Button>
+        <Button Width="35" Height="40" Margin="600,-700,0,0" Click="min" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >-</Button>
         <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-670,0,0" FontSize="25">Название книги</Label>
         <TextBox Name="bookNameTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-580,0,0"></TextBox>
         <Label  Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-430,0,0" FontSize="25">Издатель</Label>
